buildscript {
    ext {
        queryDslVersion = "5.0.0"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.17'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '18'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    //swagger
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
    //spring-data-envers
    implementation group: 'org.springframework.data', name: 'spring-data-envers'
    //mockito
    testImplementation 'org.mockito:mockito-core:4.8.0'
    //assert-j
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
    //jwt
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
    //lombok
    testImplementation 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    //query-dsl
    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
    implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    //mail-sender
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    //thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    //webflux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    //s3
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.13'
    //websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    //logback
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
}

def generatedDir =  "$buildDir/main/generated"

tasks.named('test') {
    useJUnitPlatform()
}
clean {
    delete file(generatedDir)
}